force-app/main/default/objects/Tender__c/Tender__c.object-meta.xml
<CustomObject>
    <label>Tender</label>
    <nameField>
        <label>Tender Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tenders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>