force-app/main/default/objects/Tender__c/fields/Tender_Stage__c.field-meta.xml
<CustomField>
    <fullName>Tender_Stage__c</fullName>
    <label>Tender Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Close</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>