force-app/main/default/objects/Tender__c/fields/Tender_Start_date__c.field-meta.xml
<CustomField>
    <fullName>Tender_Start_date__c</fullName>
    <label>Tender Start date</label>
    <type>Date</type>
</CustomField>